--- a/chrome/components/one_UC-settings-addons-pages.css
+++ b/chrome/components/one_UC-settings-addons-pages.css
@@ -1,57 +1,8 @@
 /* Source file made available under Mozilla Public License v. 2.0 See the main repository for updates as well as full license text.
-   https://github.com/Godiesc/firefox-gx */
+   https://github.com/Godiesc/firefox-one */
 
 @media (prefers-color-scheme: dark){
- window, dialog {                                                                            /*Colores varios de paginas de about:addons y about:settings*/
-    background-color: #1a1a24 !important;
-    --in-content-primary-button-background: var(--general-color) !important;
-    --in-content-primary-button-text-color: white !important;
-    --in-content-primary-button-background-hover: var(--button-active-bgcolor) !important;   /*color de los radiobutton (fondo) :hover*/
-    --in-content-primary-button-background-active: var(--general-color) !important;          /*color de los radiobutton (clic) con check*/
-
-    --checkbox-unchecked-bgcolor: #101019 !important;                                        /*color de los checkbox vacíos*/
-    --checkbox-unchecked-hover-bgcolor: var(--general-color) !important;                     /*color de los checkbox hover*/
-    --checkbox-unchecked-active-bgcolor: var(--general-color) !important;                    /*color de los checkbox al darle clic*/
-    --checkbox-checked-bgcolor: var(--general-color) !important;                             /*color de los checkbox con check*/
-    --checkbox-checked-color: #fff !important;                                               /*color de la palomita check*/
-    --checkbox-checked-hover-bgcolor: color-mix(in srgb,
-        var(--general-color), transparent) !important;                                       /*color de los checkbox con check hover*/
-
-    --in-content-box-background: #1f1f30  !important;
-    --in-content-box-border-color: #4d4d68  !important;
-
-    --in-content-button-background: var(--in-content-box-border-color) !important;           /*color de botones*/
-    --in-content-button-background-hover: var(--general-color) !important;                   /*color de botones :hover*/
-    --in-content-button-background-active: var(--button-hover-bgcolor) !important;           /*color de botones al darle clic*/
-    }}
-
-@media (prefers-color-scheme: light){
- window, dialog {                                                                            /*Colores varios de paginas de about:addons y about:settings*/
-    background-color: #f9f9f9 !important;
-    --in-content-primary-button-background: var(--general-color) !important;
-    --in-content-primary-button-text-color: white !important;
-    --in-content-primary-button-background-hover: var(--button-active-bgcolor) !important;   /*color de los radiobutton (fondo) :hover*/
-    --in-content-primary-button-background-active: var(--general-color) !important;          /*color de los radiobutton (clic) con check*/
-
-    --checkbox-unchecked-bgcolor: #f9f9f9 !important;                                        /*color de los checkbox vacíos*/
-    --checkbox-unchecked-hover-bgcolor: var(--general-color) !important;                     /*color de los checkbox hover*/
-    --checkbox-unchecked-active-bgcolor: var(--general-color) !important;                    /*color de los checkbox al darle clic*/
-    --checkbox-checked-bgcolor: var(--general-color) !important;                             /*color de los checkbox con check*/
-    --checkbox-checked-color: #fff !important;                                               /*color de la palomita check*/
-    --checkbox-checked-hover-bgcolor: color-mix(in srgb,
-        var(--general-color), transparent) !important;                                       /*color de los checkbox con check hover*/
-
-    --in-content-box-background: #bababa  !important;
-    --in-content-box-border-color: #aeaeae  !important;
-
-    --in-content-button-background: var(--in-content-box-border-color) !important;           /*color de botones*/
-    --in-content-button-background-hover: var(--button-active-bgcolor) !important;           /*color de botones :hover*/
-    --in-content-button-background-active: var(--button-hover-bgcolor) !important;           /*color de botones al darle clic*/
-    --in-content-button-text-color: black !important;
-    }}
-
-@media (prefers-color-scheme: dark){
-:root {                                                                             /*Colores varios de paginas de about:addons y about:settings*/
+:root, window, dialog {                                                                             /*Colores varios de paginas de about:addons y about:settings*/
     --in-content-page-background: #121018 !important;                               /*Fondo general*/
     --in-content-text-color: #fff !important;                                       /*Color general de label*/
     --in-content-page-color: #fff !important;                                       /*color de texto general*/
@@ -86,10 +37,10 @@
     --in-content-button-background-hover: var(--button-active-bgcolor) !important;      /*color de botones :hover*/
     --in-content-button-background-active: var(--general-color) !important;             /*color de botones al darle clic*/
 
-    --in-content-link-color: var(--general-color) !important;                           /*color de links*/
-    --in-content-link-color-hover: #00ccff !important;                                  /*color de links*/
-    --in-content-link-color-active:  #0099ff !important;                                /*color de links*/
-    --in-content-link-color-visited: #0099ff !important;                                /*color de links*/
+    --link-color: var(--general-color) !important;                                      /*color de links*/
+    --link-color-hover: var(--green) !important;                                        /*color de links*/
+    --link-color-active: var(--blue) !important;                                        /*color de links*/
+    --link-color-visited: var(--general-color) !important;                              /*color de links*/
 
     --in-content-accent-color:  var(--in-content-text-color) !important;                /*color de label del menú izquiero seleccionado*/
     --in-content-accent-color-active: var(--in-content-text-color) !important;          /*color de label del menú izquiero seleccionado (al dar clic)*/
@@ -110,7 +61,7 @@
 
     }}
 @media (prefers-color-scheme: light){
-:root{
+:root, window, dialog {
    --in-content-page-background: #f9f9f9 !important;                                /*Fondo general*/
     --in-content-text-color: #000 !important;                                       /*Color general de label*/
     --in-content-page-color: #000 !important;                                       /*color de texto general*/
@@ -146,10 +97,10 @@
     --in-content-button-background-active: var(--general-color) !important;             /*color de botones al darle clic*/
     --in-content-button-text-color-hover: white !important;                             /*Color de letras en botones hover */
 
-    --in-content-link-color: var(--general-color) !important;                           /*color de links*/
-    --in-content-link-color-hover: #00ccff !important;                                  /*color de links*/
-    --in-content-link-color-active:  #0099ff !important;                                /*color de links*/
-    --in-content-link-color-visited: #0099ff !important;                                /*color de links*/
+    --link-color: var(--general-color) !important;                                      /*color de links*/
+    --link-color-hover: var(--green) !important;                                        /*color de links*/
+    --link-color-active: var(--blue) !important;                                        /*color de links*/
+    --link-color-visited: var(--general-color) !important;                              /*color de links*/
 
     --in-content-accent-color:  var(--in-content-text-color) !important;                /*color de label del menú izquiero seleccionado*/
     --in-content-accent-color-active: var(--in-content-text-color) !important;          /*color de label del menú izquiero seleccionado (al dar clic)*/
@@ -167,6 +118,39 @@
 
     --gradiente-casual: linear-gradient(to right, var(--in-content-box-border-color) 90%, transparent ) !important;
     --card-shadow-hover: var(--card-shadow), 0 0 0 5px var(--card-outline-color) !important;
+    }}
+
+@media (prefers-color-scheme: dark){
+ window, dialog {                                                                            /*Colores varios de paginas de about:addons y about:settings*/
+    --in-content-page-background: #1a1a24 !important;
+    --in-content-primary-button-background: var(--general-color) !important;
+    --in-content-primary-button-text-color: white !important;
+    --in-content-primary-button-background-hover: var(--button-active-bgcolor) !important;   /*color de los radiobutton (fondo) :hover*/
+    --in-content-primary-button-background-active: var(--general-color) !important;          /*color de los radiobutton (clic) con check*/
+
+    --in-content-box-background: #23232f  !important;
+    --in-content-box-border-color: #4d4d60  !important;
+
+    --in-content-button-background: var(--in-content-box-border-color) !important;           /*color de botones*/
+    --in-content-button-background-hover: var(--general-color) !important;                   /*color de botones :hover*/
+    --in-content-button-background-active: var(--button-hover-bgcolor) !important;           /*color de botones al darle clic*/
+    }}
+
+@media (prefers-color-scheme: light){
+ window, dialog {                                                                            /*Colores varios de paginas de about:addons y about:settings*/
+    --in-content-page-background: #f9f9f9 !important;
+    --in-content-primary-button-background: var(--general-color) !important;
+    --in-content-primary-button-text-color: white !important;
+    --in-content-primary-button-background-hover: var(--button-active-bgcolor) !important;   /*color de los radiobutton (fondo) :hover*/
+    --in-content-primary-button-background-active: var(--general-color) !important;          /*color de los radiobutton (clic) con check*/
+
+    --in-content-box-background: #bababa  !important;
+    --in-content-box-border-color: #aeaeae  !important;
+
+    --in-content-button-background: var(--in-content-box-border-color) !important;           /*color de botones*/
+    --in-content-button-background-hover: var(--button-active-bgcolor) !important;           /*color de botones :hover*/
+    --in-content-button-background-active: var(--button-hover-bgcolor) !important;           /*color de botones al darle clic*/
+    --in-content-button-text-color: black !important;
     }}
 
 /*-------------------------------> Colores varios de la interfaz de complementos y configuración <---------------------------------------*/
