--- a/chrome/components/one_close-button.css
+++ b/chrome/components/one_close-button.css
@@ -3,11 +3,9 @@
 
 /*"Botón de cerrar pestaña" en windows y linux */
 
-@media (-moz-platform: windows) , (-moz-platform: linux) {
-    :is(#TabsToolbar) .close-icon {
-        width: 15px !important;
-        height: 15px !important;
-    }
+:is(#TabsToolbar) .close-icon {
+    width: 15px !important;
+    height: 15px !important;
 }
 
 .tabbrowser-tab .tab-close-button{
@@ -16,84 +14,26 @@
 
 .tabbrowser-tab:not([pinned]):hover .tab-close-button{
     display: block !important;
+    border-radius: 3px !important;
 }
 
 :is(#TabsToolbar) .tab-close-button {
     padding: 2px !important;
 }
 
-@media (-moz-platform: windows), (-moz-platform: linux) {
-    :is(#TabsToolbar) .tab-close-button:hover {
-        background-color: color-mix(in srgb, var(--toolbarbutton-hover-background) 40%, var(--border-contrast-color)) !important;
-        fill: var(--lwt-tab-text) !important;
-    }
-    
-    :is(#TabsToolbar) tab:not([selected]) .tab-close-button:hover,
-    :root:not([chromehidden~="toolbar"]):is([lwtheme-image],[style*="--lwt-additional-images"]) :is(#TabsToolbar) tab:not([selected]) .tab-close-button:hover{
-        background-color: color-mix(in srgb, var(--lwt-frame) 70%, transparent) !important;
-    }
-    
-    /* Nuevos colores :hover para temas que usan imágenes */
-    
-    :root:not([chromehidden~="toolbar"]):is([lwtheme-image],[style*="--lwt-additional-images"]) :is(#TabsToolbar) .tab-close-button:hover {
-        background-color: var(--toolbarbutton-hover-background) !important;
-        fill: var(--lwt-tab-text) !important;
-    }
-    
+:is(#TabsToolbar) .tab-close-button:hover {
+    background-color: color-mix(in srgb, var(--toolbarbutton-hover-background) 40%, var(--border-contrast-color)) !important;
+    fill: var(--lwt-tab-text) !important;
 }
-
-/*----------------- Botón de cerrar pestaña" en MacOS --------------------*/
-
-@media (-moz-platform: macos) {
-    .tab-content {
-        pointer-events: none
-    }
-    .tab-icon-image:not([busy]) {
-        display: block !important;
-    }
-    .tabbrowser-tab:hover .tab-icon-image:not([pinned]), .tabbrowser-tab:hover > .tab-icon-stack {
-        visibility: hidden;
-        opacity: 0 !important;
-    }
-    .tabbrowser-tab:hover .tab-throbber[busy], .tabbrowser-tab:hover .tab-icon-pending[busy] {
-        --tab-loading-fill: transparent !important;
-        opacity: 0 !important;
-    }
-    .tab-close-button {
-        order: -1 !important;
-        display: -moz-box !important;
-        position: relative;
-        margin-inline: 4px -20px !important;
-        padding-inline-start: 0px !important;
-        opacity: 0;
-        width: 20px !important;
-        height: 20px !important;
-        padding: 3px !important;
-        pointer-events: auto;
-        border-radius: 50% !important;
-        background-color: color-mix(in srgb, var(--lwt-tab-text) 80%, transparent) !important;
-        color: var(--contrast-color) !important;
-    }
-    .tabbrowser-tab:hover .tab-close-button:not(:hover) {
-        background-color: transparent !important;
-        color: var(--lwt-tab-text) !important;
-    }
-    .close-icon {
-        width: 16px !important;
-        height: 16px !important;
-    }
-    .tabbrowser-tab:hover .tab-close-button {
-        opacity: 1;
-        margin-inline: 0px -16px !important;
-    }
-    .tabbrowser-tab[pinned] .tab-close-button {
-        display: none !important;
-    }
-    /* These exist for compatibility with combined_favicon_and_tab_close_button.css */
-    .tab-icon-overlay {
-        pointer-events: auto
-    }
-    .tab-content > .tab-icon-stack, .tab-icon-stack:hover > .tab-icon-image {
-        visibility: visible
-    }
+    
+:is(#TabsToolbar) tab:not([selected]) .tab-close-button:hover,
+:root:not([chromehidden~="toolbar"]):is([lwtheme-image],[style*="--lwt-additional-images"]) :is(#TabsToolbar) tab:not([selected]) .tab-close-button:hover{
+    background-color: color-mix(in srgb, var(--lwt-frame) 70%, transparent) !important;
+}
+    
+/* Nuevos colores :hover para temas que usan imágenes */
+    
+:root:not([chromehidden~="toolbar"]):is([lwtheme-image],[style*="--lwt-additional-images"]) :is(#TabsToolbar) .tab-close-button:hover {
+    background-color: var(--toolbarbutton-hover-background) !important;
+    fill: var(--lwt-tab-text) !important;
 }
