--- a/chrome/components/one_contextual-menu.css
+++ b/chrome/components/one_contextual-menu.css
@@ -14,24 +14,10 @@ menupopup > menuitem, menupopup > menu {
     padding: 0 6px !important;
 }
 
-/* Borde izquierda y derecha del menú contextual */
-
-/*
-menugroup>menuitem:first-child { appearance: none !important; padding-left:  4px !important; }
-menugroup>menuitem:last-child  { appearance: none !important; padding-right: 4px !important; }
-*/
-
-/* context menu top buttons radius */
-
-menugroup > menuitem > hbox > image {
-    appearance: none !important;
-    border-radius: 2px !important;
-}
-
 /* separador de items */
 
 menuseparator {
-    padding-inline: 0 !important;
+    padding-inline-end: 0 !important;
     padding-inline-start: 12px !important;
 }
 
@@ -65,8 +51,8 @@ menupopup:not(#PlacesToolbar) menupopup {
 .menupopup-arrowscrollbox {
     appearance: none !important;
     background-image: var(--noise-urlbar-personal) !important;
-    box-shadow: 0px 0px 0 1px var(--border-contrast-color, #09080d) !important;
     background-color: var(--arrowpanel-background, #1c1726) !important; 
+    box-shadow: 0px 0px 0 1px var(--border-contrast-color, #09080d) !important;
     color: var(--arrowpanel-color, #ffffff) !important;
     border-color: var(--arrowpanel-border-color) !important;
     border-radius: 8px !important;
@@ -92,17 +78,19 @@ menupopup > menuitem:is([disabled="true"]):hover {
     background: transparent !important;
 }
 
-/* Necesario para quitar glitch indeseado al mover el mouse rapidamente sobre items de menús */
+/* Necesario para quitar glitch indeseado al mover el mouse sobre items inhabilitados */
 
-menupopup > menuitem:not([selected="true"]), menupopup > menu {
+menupopup > menuitem:is([disabled="true"]), menupopup > menu:is([disabled="true"]) {
+    /*display: none !important;*/
     appearance: none !important;
     background-color: transparent !important;
 }
 
-menupopup > menu[open="true"] {
+/* color the fondo para items seleccionados con las teclas de dirección */
+
+menu:where([_moz-menuactive="true"]:not([disabled="true"])), menuitem:where([_moz-menuactive="true"]:not([disabled="true"])) {
     appearance: none !important;
-    background: var(--button-active-bgcolor) !important;
-    color: #ffffff !important;
+    background-color: var(--button-active-bgcolor) !important;
 }
 
 /* Mostrar background-color en el item seleccionado */
@@ -148,15 +136,12 @@ menupopup > menuitem:is([selected="true"]):hover:not([disabled="false"]) {
 
 /* #################################### LINUX ####################################### */
 
+@media (-moz-platform: linux) {
+    
 menupopup > menuitem, menupopup > menu {
     appearance: none !important;
     padding-block: 4px !important;
 }
-
-
-/* Flecha menú contextual desplegable Linux */
-
-@media (-moz-platform: linux) {
 
 /* Borde items */
     
@@ -193,20 +178,7 @@ menugroup > menuitem:not([selected="true"]), menugroup > menu {
     appearance: none !important;
     background-color: transparent !important;
 }
-    
-    /* Configuración para los íconos del menú contextual: back, forward, reload, bookmark 
-menugroup>menuitem{ background: transparent !important; background-color: transparent !important;}
-menugroup>menuitem:first-child{ margin-left: 4px !important;}
-menugroup>menuitem:last-child{ margin-right: 4px !important;}
-menugroup menuitem:not([disabled="true"]):hover{
-    appearance: none !important; 
-    background: transparent !important;
-    background-color: var(--button-hover-bgcolor) !important; 
-    border-radius: 3px !important; }
-#context-navigation > .menuitem-iconic:hover:not([disabled="true"]) > .menu-iconic-left > .menu-iconic-icon{
-    appearance: none !important;
-    background-color: transparent !important; }*/
-    
+
 /* Makes context navigation buttons appears as normal textual menuitems */
     
 #context-navigation {
