--- a/chrome/components/one_menu.css
+++ b/chrome/components/one_menu.css
@@ -4,7 +4,11 @@
 @media (-moz-platform: windows), (-moz-platform: linux) {
     :root {
         --label-color: color-mix(in srgb, var(--arrowpanel-color, var(--lwt-tab-text))80%, var(--Button-background-personal));
-        --margin-left-icons-personal: 9px !important;
+        --margin-left-icons-personal: 2px !important;
+        --margin-right-icons-personal: 6px !important;
+        --margin-left-separators: calc(var(--margin-left-icons-personal) + var(--margin-right-icons-personal) + 22px) !important;
+        --menu-label: "" ;
+        --padding-left-tab: 32px;
     }
 
 /* ------------Menú hamburguesa-> top-left ------------- */
@@ -44,50 +48,45 @@
 /* tamaño botón Menú */
     
     :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button {
-        padding: var(--margin-top-personal) 0 0 0 !important;
-        max-height: calc(var(--tab-height-personal) + var(--tab-block-margin) * 2) !important;
-        min-height: calc(var(--tab-height-personal) + var(--tab-block-margin) * 2) !important;
+        padding: 0px !important;
+        height: calc(var(--tab-height-personal) + var(--tab-block-margin) * 2) !important;
+    }
+    
+    :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button>.toolbarbutton-badge-stack {
+        height: calc(var(--tab-height-personal) + var(--tab-block-margin) / 2) !important;
+        width: var(--padding-left-tab) !important;
+        padding-inline: 2px !important;
     }
     
 /* menu :hover y open */
-    
-    :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button>.toolbarbutton-badge-stack {
-        max-height: calc(var(--tab-height-personal)) !important;
-        min-height: calc(var(--tab-height-personal)) !important;
-    }
-    
+
     :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button:not([open]):hover>.toolbarbutton-badge-stack {
         background-color: var(--toolbarbutton-hover-personal) !important;
-        border-radius: 4px !important;
+        border-radius: 7px !important;
     }
     
-    :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button[open]>.toolbarbutton-badge-stack {
-        background-image: var(--noise-urlbar-personal) !important;
-        background-color: var(--arrowpanel-background, #50505090) !important;
-        border: 1px solid transparent !important;
-        border-color: var(--arrowpanel-border-color) !important;
-        box-shadow: -1px 0px var(--border-contrast-color) !important;
-        width: 28.5em !important;
+    :root:not([chromehidden~="toolbar"],[sizemode="normal"],[sizemode="fullscreen"]) 
+        #PanelUI-menu-button[open]>.toolbarbutton-badge-stack {
+            --menu-label: "Menu" ;
+            --padding-left-tab: 74px;
+            background-image: var(--noise-urlbar-personal) !important;
+            background-color: var(--arrowpanel-background, #50505090) !important;
+            /* Simula el borde que falta al botón menú open */
+            outline: 1px solid var(--arrowpanel-border-color) !important;
+            outline-offset: -1px !important;
+            box-shadow: -1px 0px var(--border-contrast-color)  !important;
     }
 
 /* Logo */
     
-    :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button .toolbarbutton-badge-stack {
+    :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button {
         list-style-image: url("chrome://branding/content/icon32.png") !important;
-        display: -moz-box !important;
-        max-height: var(--tab-height-personal) !important;
-        min-width: var(--padding-left-tab) !important;
-        max-width: var(--padding-left-tab) !important;
-        -moz-box-pack: center !important;
-        fill: var(--general-color) !important;
-        border: 1px solid transparent !important;
     }
     
     :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button image {
-        margin-top: -1px !important;
-        min-height: 18px !important;
-        min-width: 18px !important;
-        margin-inline-start: 2px !important;
+        height: 18px !important;
+        width: 18px !important;
+        margin-inline: 5px !important;
     }
     
 /* Label Menú */
@@ -97,26 +96,30 @@
         align-items: center !important;
     }
     
-    :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button>stack::after {
-        display: -moz-box;
+    :root:not([chromehidden~="toolbar"])[sizemode="maximized"] #PanelUI-menu-button[open]>stack::after {
+        width: var(--padding-left-tab) !important;
         content: var(--menu-label);
         color: var(--label-color) !important;
-        margin-inline-start: 5px !important;
+        background-image: var(--noise-urlbar-personal, var(--noise-urlbar-personal, none)),
+                          linear-gradient(var(--arrowpanel-background), var(--arrowpanel-background)),
+                          linear-gradient(var(--arrowpanel-background), var(--arrowpanel-background)) !important;
+        padding-inline: calc(var(--margin-right-icons-personal) - 5px) 6px !important;
+        padding-block: 6px !important;
         text-shadow: none !important;
-        animation: none !important;
     }
     
 /* Padding top para hacer espacio para la fila del Label menú */
     
     :root:not([chromehidden~="toolbar"])[sizemode="maximized"] #appMenu-popup>panelmultiview>box>box>panelview {
-        padding-top: calc(var(--tab-height-personal)) !important;
+        padding-top: var(--tab-height-personal) !important;
     }
     
 /* Margin top para subir el menú [open] */
     
     :root:not([chromehidden~="toolbar"])[sizemode="maximized"] #appMenu-popup {
+        --padding-left-tab: 74px !important;
         appearance: none !important;
-        margin-top: calc(-6px - var(--tab-height-personal)) !important;
+        margin-top: calc(0px - var(--tab-block-margin) - var(--tab-height-personal)) !important;
         padding-inline-start: 4px !important;
         clip-path: polygon(0% 0%, 0% 100%, 1% 53%, 0 10px, calc(var(--padding-left-tab) + 4px) 10px,
                calc(var(--padding-left-tab) + 4px) calc(var(--tab-height-personal) + 2px), 0 calc(var(--tab-height-personal) + 2px), 0 100%, 100% 100%, 100% 0%);
@@ -124,42 +127,25 @@
         --arrowpanel-border-radius: 8px !important;
         --panel-separator-margin-horizontal: 0px !important;
     }
-    
-    :root:is([sizemode="maximized"]):not([tabsintitlebar], [chromehidden~="toolbar"]) #appMenu-popup {
-        margin-top: calc(-1px - var(--tab-height-personal) + var(--tab-block-margin)) !important;
-    }
-    
-/* zoom icons */
-    
-#appMenu-zoomReduce-button2 > .toolbarbutton-icon, #appMenu-zoomEnlarge-button2 > .toolbarbutton-icon{
-    margin-inline: -4px !important;
-}
-    
+
 /* Separadores */
     
-    :root:not([chromehidden~="toolbar"]) #appMenu-popup.cui-widget-panel toolbarseparator {
-        margin-inline-start: 30px !important;
+    :root:not([chromehidden~="toolbar"])[sizemode="maximized"]{
+    #appMenu-popup.cui-widget-panel toolbarseparator {
+        margin-inline-start: var(--margin-left-separators) !important;
         --panel-separator-margin-vertical: 2px !important;
         --panel-separator-margin: var(--panel-separator-margin-vertical) var(--panel-separator-margin-horizontal) !important;
-    }
+        }
+        
+    /* Linea sobre label Account solo en ventana maximizada */
     
-/* Color de íconos y label */
-
-    .subviewbutton:not([disabled]), #appMenu-popup toolbarbutton:not([disabled]) .toolbarbutton-text label {
-        -moz-context-properties: fill;
-        fill: var(--label-color) !important;
-        color: var(--label-color) !important;
-    }   
-    
-/* baner de -actualización disponible- */
-    
-    #appMenu-popup .panel-banner-item:not([disabled]), #appMenu-popup .addon-banner-item:not([disabled]) {
-        background: var(--button-bgcolor) !important;
-    }
-    
-    #appMenu-popup .panel-banner-item:not([disabled]):hover, #appMenu-popup .addon-banner-item:not([disabled]):hover {
-        background: var(--button-active-bgcolor) !important;
-    }
+    #appMenu-fxa-status2 {
+        padding-top: 2px !important;
+        border-top: 1px solid var(--panel-separator-color) !important;
+        border-image: linear-gradient(to left, var(--panel-separator-color), 
+            var(--panel-separator-color) calc(100% - var(--margin-left-separators)), 
+                             transparent calc(100% - var(--margin-left-separators))) 1 !important;
+    }}
     
 /* circulo de notificación de actualización */
     
@@ -170,68 +156,42 @@
     #PanelUI-menu-button[badge-status="update-restart"]>.toolbarbutton-badge-stack>.toolbarbutton-badge, 
     #PanelUI-menu-button[badge-status="update-unsupported"]>.toolbarbutton-badge-stack>.toolbarbutton-badge {
         box-shadow: none;
-        margin: -5px -3px 0px !important;
-        margin-inline-end: -7px !important;
-    }
-    
-    .panel-banner-item::before {
-        background: url("../images/foxFill.svg") no-repeat center/16px;
-        content: "";
-        display: block;
-        width: 16px;
-        height: 16px;
-        margin-inline-end: 7px;
-        -moz-context-properties: fill;
-        fill: #3ad3a2 !important;
+        margin: -6px -4px 0px !important;
+        margin-inline-end: -9px !important;
     }
     
     #appMenu-popup .panel-banner-item {
-        margin: 0 0px 2px !important;
-        padding-inline-start: 8px !important;
-        border-radius: 0px !important;
+        margin: 2px 0px 2px !important;
+        padding-inline-start: calc(var(--margin-left-icons-personal) + 6px) !important;
     }
     
-/* ---------------------------------------- Config para alinear íconos en el menú de hamburguesa ------------------------------------------- */
-    
-/* -> Margen de los íconos <- */
-    
-.subviewbutton:is(#appMenu-popup toolbarbutton):not(.subviewbutton-back) {
-        padding-inline-start: var(--margin-left-icons-personal) !important;
-    }
-    .subviewbutton:not(.subviewbutton-iconic, .toolbarbutton-text, [checked="true"])>.toolbarbutton-icon, .syncNowBtn {
-        width: 16px;
-        height: 16px;
-        margin-inline-end: 7px !important;
+    .panel-banner-item::before {
+        margin-inline-end: var(--margin-right-icons-personal) !important;
     }
     
-/* Margen item -tamaño- */
+/* Sobreescribir nuevo Tamaño y margen de los íconos - Trick para aplicar margen nuevo solo al menu hamburguesa maximizado */
     
-#appMenu-zoom-controls{
-    padding-inline-start: calc(var(--margin-left-icons-personal) - 0px) !important;
-}
-    
-/* ------------------------ícono account----------------------- */
-    
-/* Linea sobre label Account solo en ventana maximizada */
-    
-    :root:not([chromehidden~="toolbar"])[sizemode="maximized"] #appMenu-fxa-status2 {
-        border-top: 1px solid var(--panel-separator-color) !important;
-        border-image: linear-gradient(to left, var(--panel-separator-color), var(--panel-separator-color) 91%, transparent 91%) 1 !important;
-        padding-top: 2px !important;
+    :root:not([chromehidden~="toolbar"])[sizemode="maximized"]{
+        
+    #appMenu-popup .subviewbutton:not(.subviewbutton-iconic, .toolbarbutton-text, [checked="true"])> .toolbarbutton-icon,   /* Mayoría de botones */
+    #appMenu-popup #appMenu-fxa-status2[fxastatus="signedin"] #appMenu-fxa-label2::before, #appMenu-popup #fxa-manage-account-button::before,             /* Account icon signedin */
+    #appMenu-popup #appMenu-fxa-status2:not([fxastatus="signedin"])::before,                                                               /* Account icon not signedin */
+    #appMenu-popup #appMenu-zoom-controls:before, #appMenu-popup .syncNowBtn{           
+        width: 16px; height: 16px;   
+        margin-inline-start: var(--margin-left-icons-personal) !important;
+        margin-inline-end: var(--margin-right-icons-personal) !important;
     }
     
-/* Label account - first */
+    #appMenu-popup .subviewbutton.subviewbutton-iconic:not(.subviewbutton-back){
+        margin-inline-start: var(--margin-left-icons-personal) !important;
+    }}
 
-    /* Ícono sign-in, cuenta no iniciada  */
+/* Margin top en Cuenta no iniciada */
     
     :root:not([chromehidden~="toolbar"]) #appMenu-fxa-status2:not([fxastatus="signedin"]) {
-        margin-inline-start: calc(var(--margin-left-icons-personal) + 17px) !important;
         padding-top: 4px !important;
-        border-image: linear-gradient(to left, var(--panel-separator-color), var(--panel-separator-color) 98%, transparent 98%) 1 !important;
     }
-    :root:not([chromehidden~="toolbar"]) #appMenu-fxa-status2:not([fxastatus="signedin"]):hover toolbarbutton {
-        background-color: var(--button-active-bgcolor) !important;
-    }
+}
 
 /* Menú más pequeño en linux*/
 
